Fix card grid container collapse in Safari
Fixes https://meta.trac.wordpress.org/ticket/7557

--- a/source/wp-content/themes/wporg-parent-2021/sass/block-styles.scss
+++ b/source/wp-content/themes/wporg-parent-2021/sass/block-styles.scss
@@ -213,6 +213,8 @@
 .wp-block-group-is-layout-grid.is-style-cards-grid,
 .wp-block-post-template.is-style-cards-grid {
 	grid-auto-rows: 1fr;
+	/* stylelint-disable-next-line property-no-unknown */
+	container-type: normal;
 
 	@include break-small-only() {
 		grid-template-columns: 1fr !important;
